# network-analysis-workflow

./: .gitignore  README.md  USING_WITH_YOUR_NETWORKS.md  YOUR_NETWORKS_README.md  analyze_your_networks.py  check_networks.py  demo.py  load_network.py  pyproject.toml  real_network_example.py  setup.py  usage_example.py  verify_package.py
src/network_metrics_package/: __init__.py  main.py
src/network_metrics_package/metrics/: __init__.py  generator.py  main.py  utils.py
src/network_metrics_package/plotting/: compare_plots.py
tests/: test_generator.py  test_plotting.py
